--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 	<script src="Extensions/Lighting/lightobstacleruntimebehavior.js" crossorigin="anonymous"></script>
 	<script src="Extensions/Video/videoruntimeobject.js" crossorigin="anonymous"></script>
 	<script src="Extensions/Video/videoruntimeobject-pixi-renderer.js" crossorigin="anonymous"></script>
+	<script src="Extensions/SystemInfo/systeminfotools.js" crossorigin="anonymous"></script>
 	<script src="code0.js" crossorigin="anonymous"></script>
 	<script src="code1.js" crossorigin="anonymous"></script>
 	<script src="code2.js" crossorigin="anonymous"></script>
